# envault

./: .gitignore  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  todo.md  tsconfig.json  tsconfig.node.json  vite.config.ts
electron/: main.ts  preload.ts
electron/ipc/: auth.ipc.ts  channels.ts  clipboard.ipc.ts  export.ipc.ts  index.ts  vault.ipc.ts  window.ipc.ts
electron/services/: auth.service.ts  clipboard.service.ts  crypto.service.ts  storage.service.ts  vault.service.ts
electron/utils/: logger.ts  paths.ts
resources/: icon.icns
src/: App.tsx  global.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs  watcher.rs
src-tauri/src/commands/: auth.rs  clipboard.rs  export.rs  mod.rs  vault.rs
src-tauri/src/services/: auth.rs  clipboard.rs  crypto.rs  mod.rs  storage.rs  vault.rs  yolo.rs
src/components/auth/: AutoLockProvider.tsx  LockScreen.tsx  MasterPasswordInput.tsx  SetupWizard.tsx
src/components/layout/: AppShell.tsx  DetailPane.tsx  ItemList.tsx  ResizeHandle.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/hooks/: useAutoLock.ts  useClipboard.ts  useDebounce.ts  useIPC.ts  useKeyboard.ts  useServiceIcon.ts  useSyncStatus.ts
src/lib/: api.ts  constants.ts  env-parser.ts  svgl.ts  validation.ts
src/stores/: useAuthStore.ts  useSearchStore.ts  useToastStore.ts  useUIStore.ts  useVaultStore.ts
src/types/: electron.d.ts  ipc.ts  svgl.ts  vault.ts
(+30 files in other folders)
