[package]
name = "envault"
version = "1.0.0"
description = "Beautiful .env variable manager — Like 1Password for your environment variables"
authors = []
license = ""
repository = ""
edition = "2021"

[lib]
name = "envault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = [] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
once_cell = "1"
notify = { version = "6", features = [] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dirs-next = "2"
chrono = { version = "0.4", features = ["serde"] }
